--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,15 @@
     <artifactId>JSON_remikzu</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
